; ModuleID = '/home/carl/AnghaBench/reactos/base/system/diskpart/extr_interpreter.c_InterpretCmd.c'
source_filename = "/home/carl/AnghaBench/reactos/base/system/diskpart/extr_interpreter.c_InterpretCmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32 (i32, i32*)* }

@TRUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i32] [i32 101, i32 120, i32 105, i32 116, i32 0], align 4
@FALSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i32] [i32 114, i32 101, i32 109, i32 0], align 4
@cmds = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @InterpretCmd(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = icmp slt i32 %7, 1
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @TRUE, align 4
  store i32 %10, i32* %3, align 4
  br label %57

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 0
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @wcsicmp(i32 %14, i8* bitcast ([5 x i32]* @.str to i8*))
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %11
  %18 = load i32, i32* @FALSE, align 4
  store i32 %18, i32* %3, align 4
  br label %57

19:                                               ; preds = %11
  %20 = load i32*, i32** %5, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 0
  %22 = load i32, i32* %21, align 4
  %23 = call i64 @wcsicmp(i32 %22, i8* bitcast ([4 x i32]* @.str.1 to i8*))
  %24 = icmp eq i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %19
  %26 = load i32, i32* @TRUE, align 4
  store i32 %26, i32* %3, align 4
  br label %57

27:                                               ; preds = %19
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** @cmds, align 8
  store %struct.TYPE_3__* %28, %struct.TYPE_3__** %6, align 8
  br label %29

29:                                               ; preds = %51, %27
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  %32 = load i8*, i8** %31, align 8
  %33 = icmp ne i8* %32, null
  br i1 %33, label %34, label %54

34:                                               ; preds = %29
  %35 = load i32*, i32** %5, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 0
  %37 = load i32, i32* %36, align 4
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 0
  %40 = load i8*, i8** %39, align 8
  %41 = call i64 @wcsicmp(i32 %37, i8* %40)
  %42 = icmp eq i64 %41, 0
  br i1 %42, label %43, label %50

43:                                               ; preds = %34
  %44 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %45 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %44, i32 0, i32 1
  %46 = load i32 (i32, i32*)*, i32 (i32, i32*)** %45, align 8
  %47 = load i32, i32* %4, align 4
  %48 = load i32*, i32** %5, align 8
  %49 = call i32 %46(i32 %47, i32* %48)
  store i32 %49, i32* %3, align 4
  br label %57

50:                                               ; preds = %34
  br label %51

51:                                               ; preds = %50
  %52 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %52, i32 1
  store %struct.TYPE_3__* %53, %struct.TYPE_3__** %6, align 8
  br label %29

54:                                               ; preds = %29
  %55 = call i32 (...) @help_cmdlist()
  %56 = load i32, i32* @TRUE, align 4
  store i32 %56, i32* %3, align 4
  br label %57

57:                                               ; preds = %54, %43, %25, %17, %9
  %58 = load i32, i32* %3, align 4
  ret i32 %58
}

declare dso_local i64 @wcsicmp(i32, i8*) #1

declare dso_local i32 @help_cmdlist(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
